--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
@@ -43,7 +44,9 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:8000/api",
   "devDependencies": {
     "sass": "^1.71.1"
   }
+  
 }
